# fwkarq

./: Cargo.toml  Makefile  README.md
src/: lib.rs
src/event_bus/: mod.rs  tests.rs
src/logger/: mod.rs  tests.rs
src/logger/level/: mod.rs  tests.rs
src/logger/provider/: mod.rs  tests.rs
src/logger/sink/: mod.rs
src/logger/sink/file/: mod.rs
src/logger/sink/stdout/: mod.rs
src/rest_client/: error.rs  mod.rs  tests.rs
src/serialization/: error.rs  mod.rs  tests.rs
src/serialization/json/: mod.rs  tests.rs
src/serialization/toml/: mod.rs  tests.rs
src/serialization/yaml/: mod.rs  tests.rs
src/settings/: errors.rs  mod.rs  tests.rs
src/shell/: errors.rs  mod.rs  tests.rs
src/translator/: error.rs  mod.rs  tests.rs
src/utils/file/: errors.rs  mod.rs  tests.rs
