[package]
name = "rust_framework"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "^0"
filetime = "^0"
reqwest = { version = "^0" }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
serde_yaml = "^0"
thiserror = "^2"
tokio = { version = "^1", features = ["macros", "rt-multi-thread"] }
toml = "^1"

[lib]
doctest = false
