[package]
name = "fwkarq"
version = "1.0.0"
edition = "2024"

[dependencies]
chrono = "^0"
filetime = "^0"
reqwest = { version = "^0" }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
serde_yaml = "^0"
thiserror = "^2"
tokio = { version = "^1", features = ["fs", "macros", "rt-multi-thread"] }
toml = "^1"

[lib]
doctest = false
crate-type = ["rlib", "cdylib"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "unwind"
opt-level = 3
