[package]
name = "fwkarq"
version = "1.0.6"
edition = "2024"
description = "Basic framework for project scaffolding"
license = "MIT OR Apache-2.0"

[dependencies]
chrono = "^0"
filetime = "^0"
reqwest = { version = "^0" }
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
serde_yaml = "^0"
thiserror = "^2"
tokio = { version = "^1", features = [
    "fs",
    "macros",
    "rt-multi-thread",
    "process",
] }
toml = "^1"

[lib]
doctest = false

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "unwind"
opt-level = 3
